k8s/alb-merged-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flipt
  name: flipt-alb-controller
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: poc-ingress
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: poc-ingress-alb
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=DevOps
spec:
  rules:
    - host: flipt.training.dagility.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flipt
              port:
                number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: vault-alb-controller
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/group.name: poc-ingress
   alb.ingress.kubernetes.io/group.order: '2'
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/load-balancer-name: poc-ingress-alb
   alb.ingress.kubernetes.io/tags: Environment=dev,Team=DevOps
spec:
  rules:
    - host: vault.training.dagility.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault
              port:
                number: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: exam-portal-alb-controller
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/group.name: poc-ingress
   alb.ingress.kubernetes.io/group.order: '3'
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/load-balancer-name: poc-ingress-alb
   alb.ingress.kubernetes.io/tags: Environment=dev,Team=DevOps
spec:
  rules:
    - host: service.training.dagility.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: examp-app
              port:
                number: 8880
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: exam-portal-ui-alb-controller
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/group.name: poc-ingress
   alb.ingress.kubernetes.io/group.order: '4'
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/load-balancer-name: poc-ingress-alb
   alb.ingress.kubernetes.io/tags: Environment=dev,Team=DevOps
spec:
  ingressClassName: alb
  rules:
    - host: ui.training.dagility.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: examp-portal-ui
              port:
                number: 8083
