k8s/exam-portal-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: exam-portal-alb
  annotations:
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
    # - host: "*.flipt.constoso.com"
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: examp-app
              port:
                number: 8880
